# genro-sqlmigration

./: .readthedocs.yaml  CLAUDE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: conf.py  index.rst  producer_guide.md
roadmap/: 00_INDEX.md  01_charter_and_milestones.md  02_legacy_parity_audit.md  03_test_porting_plan.md  04_json_contract_notes.md  05_extended_entities.md
src/genro_sqlmigration/: __init__.py  app.py  cli.py  command_builder.py  database.py  db_extractor.py  diff_engine.py  editor_service.py  exceptions.py  executor.py  json_producer.py  migrator.py  structures.py  validation.py  xml_producer.py
src/genro_sqlmigration/adapters/: __init__.py  mssql_adapter.py  mysql_adapter.py  pg_adapter.py  sqlite_adapter.py
src/genro_sqlmigration/readers/: __init__.py  base_reader.py  mssql_reader.py  mysql_reader.py  pg_reader.py  sqlite_reader.py
src/genro_sqlmigration/schemas/: sql_model-1.0.xsd  structure-1.0.json
src/genro_sqlmigration/writers/: __init__.py  base_writer.py  mssql_writer.py  mysql_writer.py  pg_writer.py  sqlite_writer.py
tests/: conftest.py  test_capabilities.py  test_cli.py  test_connection_error.py  test_editor_service.py  test_json_producer.py  test_migration_modes_pg.py  test_migration_mssql.py  test_migration_mysql.py  test_migration_pg.py  test_migration_sqlite.py  test_mssql_writer.py  test_mysql_writer.py  test_pg_adapter.py  test_regressions.py  test_sqlite_writer.py  test_todo_features.py  test_validation.py  test_wave0_pg.py  test_xml_producer.py
tests/support/: migration_base.py  mssql_database.py  mysql_database.py  orm_producer.py  pg_database.py  sqlite_database.py  sqltools.py
