# Copyright 2025 Softwell S.r.l.
# Licensed under the Apache License, Version 2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genro-sqlmigration"
version = "0.1.0"
description = "Database schema migration engine - compares desired structure with actual database and generates SQL commands"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Genropy Team"}
]
keywords = [
    "sql",
    "migration",
    "schema",
    "database",
    "postgresql",
    "sqlite",
    "diff",
    "ddl",
    "genro",
    "genropy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "dictdiffer>=0.9.0",
]

[project.optional-dependencies]
postgresql = [
    "psycopg[binary]>=3.1.0",
]
mysql = [
    "pymysql",
]
mssql = [
    "pymssql",
]
validation = [
    "jsonschema>=4.18",
]
app = [
    "genro-asgi>=0.13.0",
    "genro-tytx>=0.9.3",  # <=0.9.2 NameErrors without orjson (genro-tytx#37)
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-sugar>=1.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "testing.postgresql>=1.3",
    "jsonschema>=4.18",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=3.0.0",
    "myst-parser>=4.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
]
all = [
    "genro-sqlmigration[dev,docs,postgresql]",
]

[project.urls]
Homepage = "https://github.com/genropy/genro-sqlmigration"
Documentation = "https://genro-sqlmigration.readthedocs.io"
Repository = "https://github.com/genropy/genro-sqlmigration"
Issues = "https://github.com/genropy/genro-sqlmigration/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/genro_sqlmigration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=genro_sqlmigration --cov-report=term-missing --cov-report=html --cov-report=xml"
markers = [
    "postgresql: marks tests as requiring a PostgreSQL database (deselect with '-m \"not postgresql\"')",
    "sqlite: marks tests as requiring SQLite (deselect with '-m \"not sqlite\"')",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long
    "B008",   # no function calls in arg defaults
]

[tool.ruff.lint.isort]
known-first-party = ["genro_sqlmigration"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
files = ["src/genro_sqlmigration"]

[tool.coverage.run]
source = ["src/genro_sqlmigration"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "\\.\\.\\.",
]
